# jira-scraper

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  _setup.py  demo.py  pyproject.toml  requirements.md
.github/workflows/: ci.yml  makefile.yml
jira_scraper/: __init__.py  cli.py  http_client.py  models.py  pyvenv.cfg  scraper.py  transformer.py  validator.py
jira_scraper_env/: pyvenv.cfg
tests/: __init__.py  test_e2e_cli.py  test_http_client.py  test_models.py  test_scraper.py  test_transformer.py  test_validator.py
